--- a/src/style/style-pag15a18.css
+++ b/src/style/style-pag15a18.css
@@ -173,7 +173,6 @@ p{
     height: 100vh;
 
 
-
 }
 
 #texto-direita{
@@ -183,16 +182,18 @@ p{
 
 }
 #texto-esquerda img{
-    width:500px;
-    height: 400px;
+    width:400px;
+    height: 300px;
     
 
 }
 #texto-direita img{
-    width:500px;
-    height:400px;
+    width:400px;
+    height:250px;
     
 }
-
+p{
+    font-size: 20px;
+}
 
 }
