--- a/src/style-pag1-2-28-30.css
+++ b/src/style-pag1-2-28-30.css
@@ -84,7 +84,7 @@
     
 }
 .botoes{
-    width: 200px;
+    width: 150px;
     height: auto;
     padding: 30px;
 }
@@ -92,6 +92,9 @@
 .botoes:hover{
     scale: 1.1;
     transition: .3s;
+}
+#p-pag30{
+    font-size: 25px;
 }
 
 
@@ -128,7 +131,7 @@
         font-size: 30px;
     }
     .botoes{
-        width: 250px;
+        width: 150px;
     }
     #p-pag30{
         font-size: 30px;
@@ -151,7 +154,7 @@
     }
 
     .botoes{
-        width: 250px;
+        width: 150px;
     }
     #p-pag30{
         font-size: 25px;
@@ -163,7 +166,7 @@
 @media  (min-width: 1000px) {
   
     .botoes{
-        width: 250px;
+        width: 150px;
     }
     
     #texto{
@@ -206,7 +209,7 @@
 }
 
 #titulo-apresentacao{
-    font-size: 60px;
+    font-size: 40px;
     font-weight: 600;
     font-family: 'Open Sans', sans-serif;
     text-align: center;
@@ -216,7 +219,7 @@
 }
 #texto p{
     text-align: center;  
-    font-size: 30px;
+    font-size: 25px;
     font-family: 'Open Sans';
     color: black;
     align-items: center;
