--- a/src/style/style-pag3.css
+++ b/src/style/style-pag3.css
@@ -18,7 +18,8 @@ p{
     color: rgb(0, 0, 0);
     text-align: justify;
     padding-left: 3em;
-    padding: 1em;
+    padding-right: 3em;
+
     
 }
 ul{
@@ -99,112 +100,46 @@ h2{
 }
 
 
-/* RESPONSIVIDADE */
-
-@media (min-width: 480px) {
+/* RESPONSIVIDADE TELAS PEQUENAS */
+@media screen and (min-width: 768px) and (max-width: 1024px){
 
     h2{
-        font-size: 50px;
-    }
-    
-    p{
-        text-align: justify;  
-        
         font-size: 30px;
-
+        
     }
-    #home{
-        flex-direction: column;
-    }
-    #texto-esquerda{
-        width:100%;
-        height: 50vh;
-    
-    }
-    
-    #texto-direita{
-        width:100%;
-        height: 50vh;
-    
-    
-    }
-    #texto-esquerda img{
-        width:100%;
-        height: 50vh;
+    p{
+        font-size: 20px;
+        
     }
     li{
-        font-size: 30px;
-    }
+        font-size: 20px;
         
-
-}
-@media (min-width:768px) and (max-width: 992px) {
-   
-    #home{
-        flex-direction: column;
-    }
-    #texto-esquerda{
-        width:100%;
-        height: 50vh;
-    
-    }
-    
-    #texto-direita{
-        width:100%;
-        height: 50vh;
-    
-    
-    }
-    #texto-esquerda img{
-        width:100%;
-        height: 50vh;
     }
     .botoes{
         width: 150px;
+        height: auto;
     }
-
-}
-
-
- @media  (min-width: 992px) {
-    #home{
-        display:flex;
-        flex-direction:row;
-        justify-content: center;
-        align-items: center;
-       
-    }
-    p{
-        font-size: 20px;
-       
-    }
-    ul{
-        padding-left: 3em;
     
+}
+/* RESPONSIVIDADE DISPOSITIVOS MOBILE */
+@media screen and (min-width: 320px) and (max-width: 480px) {
+    #home{
+        flex-direction: column;
+    }
+    h2{
+        font-size: 30px;
+        
+    }
+     p{
+        font-size: 16px;
+        
     }
     li{
-        font-size: 20px;
-    }
-     
-    h2{
-        font-size: 26px;
+        font-size: 16px;
         
     }
-    #texto-esquerda{
-        width:100%;
-        height: 100vh;
-    
+    .botoes{
+        width: 150px;
+        height: auto;
     }
-    
-    #texto-direita{
-        width:100%;
-        height: 100vh;
-    
-    }
-    #texto-esquerda img{
-        width:100%;
-        height: 100vh;
-    }
-        
-    
 }
