--- a/src/style/style-pag4-5.css
+++ b/src/style/style-pag4-5.css
@@ -47,7 +47,7 @@ p{
     position: relative;
     font-family: 'Open Sans';
     color:  white;
-    padding-top: 1em;
+    padding-top: 0.5em;
     text-align: justify;
 }
 h1{
@@ -58,7 +58,8 @@ h1{
     color: white;
     font-weight: 700;
     padding-left: 1em;
-    padding-bottom: 0.5em;
+    padding-right: 1em;
+
 
 }
 
@@ -102,90 +103,57 @@ h1{
 }
 
 
-/* RESPONSIVIDADE */
+/* RESPONSIVIDADE TELAS PEQUENAS */
+@media screen and (min-width: 768px) and (max-width: 1024px){
 
-@media (min-width: 480px) {
-
-    #titulo h1{
-        font-size: 60px;
-    }
-    
-    #texto p{
-        text-align: justify;  
-        font-size: 600px;
-
-    }
-    #home{
-        flex-direction: column;
-    }
-    #texto-esquerda{
-        width:100%;
-        height: 50vh;
-    
-    }
-    
-    #texto-direita{
-        width:100%;
-        height: 50vh;
-    
-    
-    }
-    #texto-esquerda img{
-        width:100%;
-        height: 50vh;
-    }
-        
-
-}
-@media (min-width:768px) and (max-width: 992px) {
-   
-    #home{
-        flex-direction: column;
-    }
-    #texto-esquerda{
-        width:100%;
-        height: 50vh;
-    
-    }
-    
-    #texto-direita{
-        width:100%;
-        height: 50vh;
-    
-    
-    }
-    p{
+    h1{
         font-size: 30px;
-    }
-    
-
-}
-
-
- @media  (min-width: 992px) {
-    #home{
-        display:flex;
-        flex-direction:row;
-        justify-content: center;
-        align-items: center;
-       
+        
     }
     p{
-        font-size: 25px;
-       
-    }
-   
-    #texto-esquerda{
-        width:100%;
-        height: 100vh;
-    
+        font-size: 20px;
+        
     }
     
-    #texto-direita{
-        width:100%;
-        height: 100vh;
-    
+    .botoes{
+        width: 150px;
+        height: auto;
     }
+    #texto-direita img{
+        width: 80%;
+        height: 80%;
+    }
+    
+}
 
+/* RESPONSIVIDADE DISPOSITIVOS MOBILE */
+@media screen and (min-width: 320px) and (max-width: 480px) {
+    #home{
+        flex-direction: column;
+    }
+    #texto-esquerda{
+        width: 100%;
+        height: 50vh;
+    }
+    #texto-direita{
+        width: 100%;
+        height: 50vh;
+    }
+    h1{
+        font-size: 35px;
+        
+    }
+     p{
+        font-size: 16px;
+        
+     }
+    .botoes{
+        width: 150px;
+        height: auto;
+    }
+    #texto-direita img{
+        width: 70%;
+        height: 70%;
+    }
     
 }
