--- a/src/style/style-pag6.css
+++ b/src/style/style-pag6.css
@@ -115,100 +115,56 @@ h1{
 
 
 
-/* RESPONSIVIDADE */
+/* RESPONSIVIDADE TELAS PEQUENAS */
+@media screen and (min-width: 768px) and (max-width: 1024px){
 
-@media (min-width: 480px) {
-
-    #titulo h1{
-        font-size: 60px;
-    }
-    
-    #texto p{
-        text-align: justify;  
-        font-size: 600px;
-
-    }
-    #home{
-        flex-direction: column;
-    }
-    #texto-esquerda{
-        width:100%;
-        height: 50vh;
-    
-    }
-    
-    #texto-direita{
-        width:100%;
-        height: 50vh;
-    
-    
-    }
-    #texto-esquerda img{
-        width:100%;
-        height: 50vh;
-    }
+    h1{
+        font-size: 30px;
         
-
-}
-@media (min-width:768px) and (max-width: 992px) {
-   
-    #home{
-        flex-direction: column;
-    }
-    #texto-esquerda{
-        width:100%;
-        height: 50vh;
-    
-    }
-    
-    #texto-direita{
-        width:100%;
-        height: 50vh;
-    
-    
     }
     p{
-        font-size: 25px;
-    }
-
-#texto-direita img{
-    width:400px;
-    height: 400px;
-}
-
-}
-
-
- @media  (min-width: 992px) {
-    #home{
-        display:flex;
-        flex-direction:row;
-        justify-content: center;
-        align-items: center;
-       
-    }
-    p{
-        font-size: 20px;
-       
-    }
-   
-    #texto-esquerda{
-        width:100%;
-        height: 100vh;
-    
+        font-size: 15px;
+        
     }
     
-    #texto-direita{
-        width:100%;
-        height: 100vh;
-    
+    .botoes{
+        width: 150px;
+        height: auto;
     }
     #texto-direita img{
-        width:400px;
-        height: 400px;
+        width: 70%;
+        height: 80%;
     }
-    h1{
-        padding: 30px;
+    
+}
+
+/* RESPONSIVIDADE DISPOSITIVOS MOBILE */
+@media screen and (min-width: 320px) and (max-width: 480px) {
+    #home{
+        flex-direction: column;
+    }
+    #texto-esquerda{
+        width: 100%;
+        height: 50vh;
+    }
+    #texto-direita{
+        width: 100%;
+        height: 50vh;
+    }
+     p{
+        font-size: 12px;
+        
+     }
+     h1{
+        font-size: 20px;
+     }
+    .botoes{
+        width: 150px;
+        height: auto;
+    }
+    #texto-direita img{
+        width: 70%;
+        height: 80%;
     }
     
 }
