--- a/src/style/style-pag3.css
+++ b/src/style/style-pag3.css
@@ -17,8 +17,9 @@ p{
     font-family: 'Open Sans';
     color: rgb(0, 0, 0);
     text-align: justify;
-    padding-left: 3em;
-    padding-right: 3em;
+    padding-left: 2em;
+    padding-right: 2em;
+    padding-top: 3em ;
 
     
 }
@@ -41,7 +42,7 @@ h2{
     color: rgb(0, 0, 0);
     font-weight: 700;
     padding-left: 3em;
-    padding: 1em;
+    padding-top: 1em ;
     
 
 }
@@ -119,7 +120,7 @@ h2{
         width: 150px;
         height: auto;
     }
-    
+   
 }
 /* RESPONSIVIDADE DISPOSITIVOS MOBILE */
 @media screen and (min-width: 320px) and (max-width: 480px) {
@@ -127,19 +128,32 @@ h2{
         flex-direction: column;
     }
     h2{
-        font-size: 30px;
+        font-size: 18px;
         
     }
      p{
-        font-size: 16px;
+       
+        font-size: 14px;
         
     }
     li{
-        font-size: 16px;
+        font-size: 14px;
         
     }
     .botoes{
         width: 150px;
         height: auto;
+    }
+    #texto-esquerda {
+        width:100%;
+        height: 50vh;
+    }
+    #texto-esquerda img {
+        width:100%;
+        height: 50vh;
+    }
+    #texto-direita {
+        width:100%;
+        height: 50vh;
     }
 }
