--- a/src/style/style-pag12a14.css
+++ b/src/style/style-pag12a14.css
@@ -5,10 +5,13 @@
     box-sizing: border-box;
 
 }
+#home{
+    display: flex;
+}
 
  
 h1{
-    font-size: 50px;
+    font-size: 40px;
     font-family: 'Open Sans', sans-serif;
     text-align: left;
     padding-left: 2em;
@@ -19,25 +22,44 @@ h1{
 }
 
 #texto-esquerda{
-    width:100%;
+    width:50%;
     height: 100vh;
     display:flex;
 	flex-direction:column;
     justify-content: center;
-    align-items: left;
+    align-items: center;
 
 }
 
 #texto-direita{
- 
+    width:50%;
+    height: 100vh;
     display:flex;
     justify-content: center;
     align-items: center;
 
 }
-#texto-direita img{
-    width:70%;
+#pag12{
+    width:60%;
     height: 70vh;
+    display:flex;
+    justify-content: center;
+    align-items: center;
+
+
+}
+#pag13{
+    width:60%;
+    height: 60vh;
+    display:flex;
+    justify-content: center;
+    align-items: center;
+
+
+}
+#pag14{
+    width:60%;
+    height: 60vh;
     display:flex;
     justify-content: center;
     align-items: center;
@@ -87,11 +109,11 @@ h1{
 
 
 p{
-    font-size: 25px;
+    font-size: 20px;
     font-family: 'Open Sans';
     color: rgb(0, 0, 0);
     text-align: justify;
-    padding-left: 4em;
+    padding-left: 3em;
     padding-right: 4em;
     padding-top: 1em;
 }
@@ -100,83 +122,95 @@ p{
 
 
 
-/* RESPONSIVIDADE */
+/* RESPONSIVIDADE TELAS PEQUENAS */
+@media screen and (min-width: 768px) and (max-width: 1024px){
 
-@media (min-width: 480px) {
+    #home{
+        flex-direction: row;
+    }
+    h1{
+        font-size: 20px;
+        
+    }
+    p{
+        font-size: 13px;
+        
+    }
+    
+    #botao1{
+        width: 150px;
+        height: auto;
+    }
+    #botao2{
+        width: 150px;
+        height: auto;
+    }
+    #pag12{
+        width:60%;
+        height: 70vh;
+    }
+    #pag12{
+        width:70%;
+        height: 60vh;
+    }
+    #pag13{
+        width:60%;
+        height: 40vh;
+    }
+    #pag14{
+        width:80%;
+        height: 50vh;
+    }
+    
+   
+}
 
+/* RESPONSIVIDADE DISPOSITIVOS MOBILE */
+@media screen and (min-width: 280px) and (max-width: 480px) {
     #home{
         flex-direction: column;
     }
     #texto-esquerda{
-
-        width:100%;
-        height: 40vh;
+        width: 100%;
+        height: 50vh;
     }
-    
     #texto-direita{
-        width:100%;
+        width: 100%;
         height: 50vh;
-    
-    
     }
-    #texto-direita img{
-       
-        width:90%;
-        height: 50vh;
-       
-    
+    h1{
+        font-size: 20px;
+        
     }
     p{
-        font-size: 30px;
-
-    }    
-    
-    h1{
-        font-size: 50px;
-        padding-top: 0;
+        font-size: 13px;
+        
     }
-    .botoes{
-        width: 250px;
+     #botao1{
+        width: 100px;
+        height: auto;
     }
-
-}
-@media (min-width:480px) and (max-width: 992px) {
-  
-   
-
-}
-
-@media  (min-width: 992px) {
-
-#home{
-    display:flex;
-	flex-direction:row;
-    justify-content: center;
-    align-items: center;
-   
-}
-#texto-esquerda{
-    width:100%;
-    height: 100vh;
-
-}
-#texto-direita{
+    #botao2{
+        width: 100px;
+        height: auto;
+    }
+    #barra{
+        height: 100px;
+        width: 50%;
+        padding-top:2em;
     
-    width:70%;
-    height: 70vh;
-
-}
-#texto-direita img{
-    width:80%;
-    height: 70vh;
-}
-h1{
-    font-size: 40px;
-    padding-top: 0;
-}
-p{
-    font-size: 20px;
-
-}    
-
+    }
+    #pag12{
+        width:60%;
+        height: 40vh;
+    }
+    #pag13{
+        width:60%;
+        height: 40vh;
+    }
+    #pag14{
+        width:60%;
+        height: 40vh;
+    }
+   
 }
