--- a/src/style/style-pag15a18.css
+++ b/src/style/style-pag15a18.css
@@ -5,15 +5,18 @@
     box-sizing: border-box;
 
 }
+#home{
+    display: flex;
+}
 
  
 h1{
-    font-size: 50px;
+    font-size: 40px;
     font-family: 'Open Sans', sans-serif;
     text-align: center;
     color: rgb(255, 255, 255);
     font-weight: 700;
-    padding-bottom: 3em;
+    padding-bottom: 1em;
     
 
 }
@@ -38,17 +41,18 @@ h1{
     align-items: center;
 
 }
-#texto-esquerda img{
-    width:500px;
-    height: 400px;
-    
-
-}
 #texto-direita img{
-    width:600px;
-    height: 400px;
-    
+    width: 60%;
+    height: 40vh;
 }
+#texto-esquerda img{
+    width: 100%;
+    height: 50vh;
+}
+
+
+
+
 .footer{
     display: flex;
     bottom: 0;
@@ -70,11 +74,11 @@ h1{
 }
 
 p{
-    font-size: 25px;
+    font-size: 20px;
     font-family: 'Open Sans';
     color: rgb(0, 0, 0);
     text-align: justify;
-    padding: 3em;
+    padding: 2em;
 }
 
 
@@ -82,118 +86,68 @@ p{
 
 
 
+/* RESPONSIVIDADE TELAS PEQUENAS */
+@media screen and (min-width: 768px) and (max-width: 1024px){
 
-
-/* RESPONSIVIDADE */
-
-@media (max-width: 480px) {
-
-    #home{
-        flex-direction: column;
-    }
-    #texto-esquerda{
-
-        width:100%;
-        height: 50vh;
-    }
-    
-    #texto-direita{
-        width:100%;
-        height: 50vh;
-    
-    
-    }
-    #gif{
-        width:100%;
-        height: 50vh;
-    }
-    p{
-        font-size: 30px;
-    }    
-
-    #texto-direita img{
-        width:800px;
-        height: 600px;
+    h1{
+        font-size: 25px;
         
     }
-    h1{
-        font-size: 50px;
-    }
+    p{
+        font-size: 20px;
+        
+    }    
     .botoes{
         width: 150px;
+        height: auto;
     }
-
-}
-@media (min-width:480px) and (max-width: 992px) {
+    #texto-direita img{
+        width: 70%;
+        height: 40vh;
+    }
+    #texto-esquerda img{
+        width: 100%;
+        height: 50vh;
+    }
+    
    
+}
+
+/* RESPONSIVIDADE DISPOSITIVOS MOBILE */
+@media screen and (min-width: 280px) and (max-width: 480px) {
     #home{
         flex-direction: column;
     }
     #texto-esquerda{
-        width:100%;
+        width: 100%;
         height: 50vh;
-    
+        
     }
-    
     #texto-direita{
-        width:100%;
-        height: 50vh;
-    
-    }
-    #gif{
-        width:100%;
+        width: 100%;
         height: 50vh;
     }
-    
-    h1{
-        font-size: 50px;
-        padding-bottom: 1em;
-        padding-top: 1em;
+     p{
+        font-size: 13px;
+        
+     }
+     h1{
+        font-size: 20px;
+     }
+     .botoes{
+        width: 100px;
+        height: auto;
     }
-    .botoes{
-        width: 150px;
-    }
-    p{
-        font-size: 30px;
-    }
-
-}
-
-@media  (min-width: 992px) {
-
-#home{
-    display:flex;
-	flex-direction:row;
-    justify-content: center;
-    align-items: center;
-   
-}
-#texto-esquerda{
-    width:100%;
-    height: 100vh;
-
-
-}
-
-#texto-direita{
-    width:100%;
-    height: 100vh;
- 
-
-}
-#texto-esquerda img{
-    width:400px;
-    height: 300px;
     
-
-}
-#texto-direita img{
-    width:400px;
-    height:250px;
+  
+    #texto-direita img{
+        width: 70%;
+        height: 50vh;
+    }
+    #texto-esquerda img{
+        width: 100%;
+        height: 30vh;
     
-}
-p{
-    font-size: 20px;
-}
+    }
 
 }
