--- a/src/style/style-pag19-20-29.css
+++ b/src/style/style-pag19-20-29.css
@@ -79,95 +79,66 @@ h1{
 }
 
 
-/* RESPONSIVIDADE */
-@media (min-width: 480px) {
 
-    #home{
-        flex-direction: column;
-    }
-    #texto-esquerda{
-        width:100%;
-        height: 50vh;
-    }
-    
-    #texto-direita{
-        width:100%;
-        height: 50vh;
-    
-    }
-    #texto-esquerda img{
-        width:100%;
-        height: 50vh;
-    
-    }
-    
+/* RESPONSIVIDADE TELAS PEQUENAS */
+@media screen and (min-width: 768px) and (max-width: 1024px){
+
     h1{
-        font-size: 50px;
-    }
-    .botoes{
-        width: 150px;
-    }
-
-}
-@media (min-width:480px) and (max-width: 992px) {
-    #home{
-        flex-direction: column;
-    }
-    #texto-esquerda{
-        width:100%;
-        height: 50vh;
-    
-    }
-    
-    #texto-direita{
-        width:100%;
-        height: 50vh;
-    
-    }
-    h1{
-        font-size: 50px;
-        padding-bottom: 1em;
-        padding-top: 1em;
-    }
-    .botoes{
-        width: 150px;
-    }
-    p{
-        font-size: 30px;
-    }
-
-
-}
-@media  (min-width: 992px) {
-
-    #home{
-        display:flex;
-        flex-direction:row;
-        justify-content: center;
-        align-items: center;
-       
-    }
-    #texto-esquerda{
-        width:100%;
-        height: 100vh;
-    
-    }
-    
-    #texto-direita{
-        width:100%;
-        height: 100vh;
-     
-    
-    }
-    #texto-esquerda img{
-        width:100%;
-        height: 100vh;
-    
+        font-size: 25px;
+        
     }
     p{
         font-size: 20px;
-    }
+        
+    }    
     .botoes{
         width: 150px;
+        height: auto;
     }
+  
+    #texto-esquerda img{
+        width: 50%;
+        height: 100vh;
+    }
+    #texto-esquerda{
+        width:50%;
+        height: 100vh;
+    }
+   
+}
+
+/* RESPONSIVIDADE DISPOSITIVOS MOBILE */
+@media screen and (min-width: 280px) and (max-width: 480px) {
+    #home{
+        flex-direction: column;
+    }
+    #texto-esquerda{
+        width: 100%;
+        height: 50vh;
+        
+    }
+    
+    #texto-esquerda img{
+        width: 100%;
+        height: 50vh;
+    }
+    #texto-direita{
+        width: 100%;
+        height: 50vh;
+    }
+     p{
+        font-size: 13px;
+        
+     }
+     h1{
+        font-size: 20px;
+     }
+     .botoes{
+        width: 150px;
+        height: auto;
+    }
+    
+  
+  
+
 }
