--- a/src/style/style-pag19-20-29.css
+++ b/src/style/style-pag19-20-29.css
@@ -83,6 +83,9 @@ h1{
 /* RESPONSIVIDADE TELAS PEQUENAS */
 @media screen and (min-width: 768px) and (max-width: 1024px){
 
+    #home{
+        flex-direction: column;
+    }
     h1{
         font-size: 25px;
         
@@ -96,13 +99,19 @@ h1{
         height: auto;
     }
   
-    #texto-esquerda img{
-        width: 50%;
-        height: 100vh;
-    }
     #texto-esquerda{
-        width:50%;
-        height: 100vh;
+        width: 100%;
+        height: 50vh;
+        
+    }
+    
+    #texto-esquerda img{
+        width: 100%;
+        height: 50vh;
+    }
+    #texto-direita{
+        width: 100%;
+        height: 50vh;
     }
    
 }
