--- a/src/style/syle-pag22a27.css
+++ b/src/style/syle-pag22a27.css
@@ -149,28 +149,23 @@ label img{
 
 /* RESPONSIVIDADE TELAS PEQUENAS */
 @media screen and (min-width: 768px) and (max-width: 1024px){
-
-    h1{
+    .texto-clique{
         font-size: 20px;
         
-    }
-    p{
-        font-size: 15px;
-        
-    }
+     }
+     h1{
+        font-size: 20px;
+     }
     
     #botao1{
-        width: 150px;
+        width: 120px;
         height: auto;
     }
     #botao2{
-        width: 150px;
+        width: 120px;
         height: auto;
     }
-    #esquerda img{
-        width: 60%;
-        height: 60%;
-    }
+
     #esquerda{
         width: 50%;
         height: 100vh;
@@ -179,7 +174,17 @@ label img{
         width: 50%;
         height: 100vh;
     }
-    
+    .texto-clique{
+        font-size: 15px;
+        
+     }
+     #esquerda img{
+        width: 40px;
+        height: 45px;
+    }
+    .texto-resposta{
+        font-size: 15px;
+    }
    
 }
 
@@ -196,8 +201,8 @@ label img{
         width: 100%;
         height: 50vh;
     }
-     p{
-        font-size: 10px;
+    .texto-clique{
+        font-size: 20px;
         
      }
      h1{
@@ -207,6 +212,11 @@ label img{
         width: 100px;
         height: auto;
     }
+   
+    .texto-resposta{
+        font-size: 15px;
+    }
+    
     #botao2{
         width: 100px;
         height: auto;
@@ -214,7 +224,7 @@ label img{
    
   
     #esquerda img{
-        width: 70%;
-        height: 60%;
+        width: 40px;
+        height: 45px;
     }
 }
