--- a/mod1/final2/src/style/style2.css
+++ b/mod1/final2/src/style/style2.css
@@ -12,7 +12,7 @@
     display: flex;
     justify-content:center;
     align-items: flex-end;
-    background-color: #9CCCE0;
+    background-color: #e5f6fc;
 }
 
 
@@ -43,7 +43,7 @@
     width: 100%;
     height: 90vh;
     display: flex;
-    justify-content:center;
+    justify-content:space-around;
     position: absolute;
     align-items:center;
     flex-direction: column;
@@ -71,10 +71,15 @@ iframe{
 #girou{
     rotate: 180deg;
 }
+h2{
+    font-size: 30px;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    color: #0091AC;
+}
 
 @media screen and (max-width:768px) {
     
     h2{
-        font-size: 30px;
+        font-size: 15px;
     }
 }
